// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Button/DropdownButton ButtonWithDropdown smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  border-right: 0.0625rem solid transparent;
}

.emotion-5 button:first-of-type {
  border-top-right-radius: unset;
  border-bottom-right-radius: unset;
}

.emotion-6 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-7:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-7:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-7:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-7:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-9 button:last-child {
  border-top-left-radius: unset;
  border-bottom-left-radius: unset;
}

.emotion-9 svg {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-11:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-11:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-12 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-13 path {
  fill: #ffffff;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: #E7E8FF;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-18:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-22 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: #E7E8FF;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-22:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-22:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-22:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-22:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-24 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-24 path {
  fill: #1552DD;
}

.emotion-27 button:first-of-type {
  border-top-right-radius: unset;
  border-bottom-right-radius: unset;
}

.emotion-29 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-29:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-29:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-29:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-29:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-33 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-33:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-33:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-33:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-33:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <div
                      class="emotion-6"
                    >
                      <button
                        class="emotion-7"
                        data-testid="dropdownbutton"
                        type="button"
                      >
                        <span
                          class="emotion-8"
                        >
                          <span>
                            Click Here
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="emotion-9"
                  >
                    <div
                      class="emotion-6"
                    >
                      <button
                        class="emotion-11"
                        data-testid="dropdown-toggle-icon-button"
                        type="button"
                      >
                        <span
                          class="emotion-12"
                        >
                          <svg
                            class="emotion-13"
                            fill="none"
                            viewBox="0 0 12 6"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                              fill="#0E0E17"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <div
                      class="emotion-6"
                    >
                      <button
                        class="emotion-18"
                        data-testid="dropdownbutton"
                        type="button"
                      >
                        <span
                          class="emotion-8"
                        >
                          <span>
                            Click Here
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="emotion-9"
                  >
                    <div
                      class="emotion-6"
                    >
                      <button
                        class="emotion-22"
                        data-testid="dropdown-toggle-icon-button"
                        type="button"
                      >
                        <span
                          class="emotion-12"
                        >
                          <svg
                            class="emotion-24"
                            fill="none"
                            viewBox="0 0 12 6"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                              fill="#0E0E17"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-27"
                  >
                    <div
                      class="emotion-6"
                    >
                      <button
                        class="emotion-29"
                        data-testid="dropdownbutton"
                        type="button"
                      >
                        <span
                          class="emotion-8"
                        >
                          <span>
                            Click Here
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="emotion-9"
                  >
                    <div
                      class="emotion-6"
                    >
                      <button
                        class="emotion-33"
                        data-testid="dropdown-toggle-icon-button"
                        type="button"
                      >
                        <span
                          class="emotion-12"
                        >
                          <svg
                            class="emotion-24"
                            fill="none"
                            viewBox="0 0 12 6"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M0.853481 0.853541C0.538516 0.538554 0.761603 0 1.20705 0H10.793C11.2384 0 11.4615 0.538554 11.1465 0.853541L6.35357 5.64683C6.1583 5.84211 5.8417 5.84211 5.64643 5.64683L0.853481 0.853541Z"
                              fill="#0E0E17"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Button/DropdownButton IconButtonWithDropdown smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-5 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-6:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-6:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-6:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-6:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-8 path {
  fill: #ffffff;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: #E7E8FF;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-12:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-12:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-14 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #1552DD;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <button
                      class="emotion-6"
                      data-testid="icon-dropdown-icon-button"
                      type="button"
                    >
                      <span
                        class="emotion-7"
                      >
                        <svg
                          class="emotion-8"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="none"
                            stroke-width="1"
                          >
                            <path
                              d="M8,10.8 C8.77319865,10.8 9.4,11.4268014 9.4,12.2 C9.4,12.9731986 8.77319865,13.6 8,13.6 C7.22680135,13.6 6.6,12.9731986 6.6,12.2 C6.6,11.4268014 7.22680135,10.8 8,10.8 Z M8,6.6 C8.77319865,6.6 9.4,7.22680135 9.4,8 C9.4,8.77319865 8.77319865,9.4 8,9.4 C7.22680135,9.4 6.6,8.77319865 6.6,8 C6.6,7.22680135 7.22680135,6.6 8,6.6 Z M8,2.4 C8.77319865,2.4 9.4,3.02680135 9.4,3.8 C9.4,4.57319865 8.77319865,5.2 8,5.2 C7.22680135,5.2 6.6,4.57319865 6.6,3.8 C6.6,3.02680135 7.22680135,2.4 8,2.4 Z"
                            />
                          </g>
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <button
                      class="emotion-12"
                      data-testid="icon-dropdown-icon-button"
                      type="button"
                    >
                      <span
                        class="emotion-7"
                      >
                        <svg
                          class="emotion-14"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="none"
                            stroke-width="1"
                          >
                            <path
                              d="M8,10.8 C8.77319865,10.8 9.4,11.4268014 9.4,12.2 C9.4,12.9731986 8.77319865,13.6 8,13.6 C7.22680135,13.6 6.6,12.9731986 6.6,12.2 C6.6,11.4268014 7.22680135,10.8 8,10.8 Z M8,6.6 C8.77319865,6.6 9.4,7.22680135 9.4,8 C9.4,8.77319865 8.77319865,9.4 8,9.4 C7.22680135,9.4 6.6,8.77319865 6.6,8 C6.6,7.22680135 7.22680135,6.6 8,6.6 Z M8,2.4 C8.77319865,2.4 9.4,3.02680135 9.4,3.8 C9.4,4.57319865 8.77319865,5.2 8,5.2 C7.22680135,5.2 6.6,4.57319865 6.6,3.8 C6.6,3.02680135 7.22680135,2.4 8,2.4 Z"
                            />
                          </g>
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <button
                      class="emotion-18"
                      data-testid="icon-dropdown-icon-button"
                      type="button"
                    >
                      <span
                        class="emotion-7"
                      >
                        <svg
                          class="emotion-14"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="none"
                            stroke-width="1"
                          >
                            <path
                              d="M8,10.8 C8.77319865,10.8 9.4,11.4268014 9.4,12.2 C9.4,12.9731986 8.77319865,13.6 8,13.6 C7.22680135,13.6 6.6,12.9731986 6.6,12.2 C6.6,11.4268014 7.22680135,10.8 8,10.8 Z M8,6.6 C8.77319865,6.6 9.4,7.22680135 9.4,8 C9.4,8.77319865 8.77319865,9.4 8,9.4 C7.22680135,9.4 6.6,8.77319865 6.6,8 C6.6,7.22680135 7.22680135,6.6 8,6.6 Z M8,2.4 C8.77319865,2.4 9.4,3.02680135 9.4,3.8 C9.4,4.57319865 8.77319865,5.2 8,5.2 C7.22680135,5.2 6.6,4.57319865 6.6,3.8 C6.6,3.02680135 7.22680135,2.4 8,2.4 Z"
                            />
                          </g>
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
